@@ -1,7 +1,18 @@
 Changes from V8.0
 =================
 
+Gallina
+
 - Added disjunctive patterns in match-with patterns
+
+Ltac
+
+- Semantics of "match t with" changed: if a clause returns a
+  tactic, it is now applied to the current goal. If it fails, the next
+  clause or next matching subterm is tried (i.e. it behaves as "match
+  goal with").
+- New modifier "lazy" for "match t with" and "match goal with" telling
+  to delay the evaluation of tactic expression.
 
 Changes from V8.0beta to V8.0
 =============================
